# bmad-method-projects

./: .gitignore
project-1/: docker-compose.yml  prompt.md
project-1/app/: Dockerfile  package-lock.json  package.json
project-1/docs/: brief.md  epic-calculator-features.md  prd.md  ui-architecture.md
project-2/: prompt.md
project-2/Calculator/: CalculatorContract.swift  (+4 more)
project-3/: docker-compose.yml  prompt.md
project-3/user-management-service/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
project-3/user-management-service/alembic/: env.py
project-3/user-management-service/app/api/v1/: dependencies.py
project-3/user-management-service/app/api/v1/endpoints/: auth.py  users.py
project-3/user-management-service/app/core/: config.py  security.py
project-3/user-management-service/app/crud/: crud_user.py
project-3/user-management-service/app/db/: session.py
project-3/user-management-service/app/models/: user.py
project-3/user-management-service/app/schemas/: user.py
project-3/user-management-service/app/services/: user_service.py
project-3/user-management-service/scripts/: check_db.py  wait-for-it.sh
project-3/user-management-service/tests/: conftest.py
project-3/user-management-service/tests/integration/: test_auth_api.py  test_users.py
project-3/user-management-service/tests/unit/: test_crud_user.py  test_example_tdd_flow.py  test_security.py  test_user_service.py
project-4/: AGENTS.md  opencode.jsonc
project-5/: GEMINI.md  prompt.md
(+380 files in other folders)
